# EMI-Strategic-Sprint

./: .gitignore  EDI Market Expansion Strategy-gem.md  EMI-Meeting James Emery 250929.txt  EMI-Phone Helena Emery 250930.txt  EMI-Phone Isabelle Emery 251001.txt  README-WORKSPACE-ORGANIZATION.md  README.md  WBS.md  WORKSPACE-ORGANIZATION-STATUS.md  dashboard.py  gantt-chart.csv  index.html  moon-sprint-deliverables-tracker.md  project-overview.md  risk-management-plan.md  risk-mitigation-plan.md
2025-Strategic-Growth-Phase1-COMPLETED/research-assets/brand-entity-consolidation/: pyproject.toml  requirements.txt
2025-Strategic-Growth-Phase1-COMPLETED/research-assets/brand-entity-consolidation/src/brand_consolidation/: __init__.py
2025-Strategic-Growth-Phase1-COMPLETED/research-assets/brand-entity-consolidation/src/brand_consolidation/collectors/: __init__.py  social_scraper.py
2025-Strategic-Growth-Phase1-COMPLETED/research-assets/brand-entity-consolidation/tests/: test_collectors.py  test_extractors.py  test_reconciliation.py
2025-Strategic-Growth-Phase1-COMPLETED/research-assets/crawl4ai-digital-footprint/: README.md  pyproject.toml  setup.cfg
2025-Strategic-Growth-Phase1-COMPLETED/research-assets/crawl4ai-digital-footprint/docs/: architecture.md
2025-Strategic-Growth-Phase1-COMPLETED/research-assets/crawl4ai-digital-footprint/examples/: example_usage.py
2025-Strategic-Growth-Phase1-COMPLETED/research-assets/crawl4ai-digital-footprint/outputs/: emery_footprint.csv
2025-Strategic-Growth-Phase1-COMPLETED/research-assets/crawl4ai-digital-footprint/src/digital_footprint/: __init__.py  cli.py  crawler.py  mapper.py
2025-Strategic-Growth-Phase1-COMPLETED/research-assets/crawl4ai-digital-footprint/tests/: test_crawler.py  test_mapper.py
2026-Phase2-Strategic-Growth/: README-ACTIVE-PROJECT.md
(+93 files in other folders)
