[tool.poetry]
name = "brand-entity-consolidation"
version = "0.1.0"
description = "A project to identify and standardize variations of a brand name across the web."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
pandas = "^1.1.5"
scikit-learn = "^0.24.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"