[metadata]
name = crawl4ai-digital-footprint
version = 0.1.0
description = A project to develop a clear digital footprint map using Crawl4AI.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/crawl4ai-digital-footprint
license = MIT

[options]
packages = find:
install_requires =
    requests
    beautifulsoup4
    pandas

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    crawl4ai = digital_footprint.cli:main